<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngwing_com_fghfgh"
    android:orientation="vertical"
    android:theme="@android:style/Theme.DeviceDefault.Light.Dialog.NoActionBar"
    tools:context=".login">

    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="221dp"
        android:layout_height="58dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/textoLogin1"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/tvIngresoCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/textoLogin2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/correo"
        android:textColor="#A8A3A3"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvIngresarContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoLogin3" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/contrasenia"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvRecuperarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:onClick="recuperarCuenta"
        android:text="@string/recuperacionDecontrania" />

    <CheckBox
        android:id="@+id/cbRecuerdame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/cbRecuerdame" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:onClick="goInicio"
        android:text="@string/btnIniciarSesion"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:onClick="registro"
        android:text="@string/btnRegistrarse"
        android:textAlignment="center"
        android:textSize="20dp" />

</LinearLayout>