<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngwing_com_fghfgh"
    android:orientation="vertical"
    android:theme="@android:style/Theme.DeviceDefault.Light.Dialog.NoActionBar"
    tools:context=".opcionRegistro">





    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="221dp"
        android:layout_height="58dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/textoOpcion1"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoOpcion2" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:onClick="goRegisMascota"
        android:text="@string/btnHost"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoOpcion3" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:onClick="goRegisMascota"
        android:text="@string/btnMascota"
        android:textAlignment="center"
        android:textSize="20dp" />

</LinearLayout>