<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngwing_com_fghfgh"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="314dp"
        android:layout_height="106dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toEndOf="@+id/texto2"
        app:layout_constraintStart_toStartOf="@+id/texto2"
        app:layout_constraintTop_toBottomOf="@+id/texto2"
        app:srcCompat="@drawable/innpets"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/texto1"
        android:layout_width="281dp"
        android:layout_height="53dp"
        android:layout_marginTop="79dp"
        android:hint="@string/bienvenida"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/a"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/texto1"
        app:layout_constraintStart_toStartOf="@+id/texto1"
        app:layout_constraintTop_toBottomOf="@+id/texto1" />

    <TextView
        android:id="@+id/texto3"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:text="@string/texto1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/texto4"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:text="@string/texto2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/texto3"
        app:layout_constraintStart_toStartOf="@+id/texto3"
        app:layout_constraintTop_toBottomOf="@+id/texto3" />

    <TextView
        android:id="@+id/texto5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/texto3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/texto4"
        app:layout_constraintStart_toStartOf="@+id/texto4"
        app:layout_constraintTop_toBottomOf="@+id/texto4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/btnContinuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/texto5"
        app:layout_constraintStart_toStartOf="@+id/texto5"
        app:layout_constraintTop_toBottomOf="@+id/texto5" />

</androidx.constraintlayout.widget.ConstraintLayout>