<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngwing_com_fghfgh"
    android:orientation="vertical"
    android:theme="@android:style/Theme.DeviceDefault.Light.Dialog.NoActionBar"
    tools:context=".registro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="387dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:text="@string/registroUsuario"
                android:textAlignment="center"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/nombres" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/apellidos" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/rut" />

            <EditText
                android:id="@+id/etRUT"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/correoElectronico" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/fechaNacimiento" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etFechaNacimiento"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="109dp"
                    android:layout_height="58dp"
                    android:backgroundTint="#FFFFFF"
                    android:onClick="abrirCalendario"
                    app:srcCompat="@drawable/pngegg__1_"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/sexo" />

            <RadioGroup
                android:id="@+id/rgGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="50px"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/rbMasculino" />

                <RadioButton
                    android:id="@+id/rbFemenino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/rbFemenino" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/region" />

            <Spinner
                android:id="@+id/spRegiones"
                android:layout_width="307dp"
                android:layout_height="40dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:entries="@array/region" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/comuna" />

            <Spinner
                android:id="@+id/spComunas"
                android:layout_width="307dp"
                android:layout_height="40dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:entries="@array/comuna" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/ciudad" />

            <Spinner
                android:id="@+id/spCiudad"
                android:layout_width="313dp"
                android:layout_height="40dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:entries="@array/ciudad" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/contrasenia" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/contrasenia2" />

            <EditText
                android:id="@+id/etPass2"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/tyc" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/notificaciones" />



            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:onClick="goTransicion"
                android:text="@string/btnRegistrarse"
                android:textAlignment="center"
                android:textSize="15dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>